--- a/views/jobgetall.ejs
+++ b/views/jobgetall.ejs
@@ -11,9 +11,9 @@
 </head>
 <table>
 <body>
-
+    
 <% job.forEach((job) => {%>
-    <tr>
+    <tr><h2>work qqwee</h2>
         <td><%= job.name_job%></td>
         <td><%= job.role%></td>
         <td><%= job.detail_work%></td>
