--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,75 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
-    <!-- <link rel="stylesheet" href=".css/bootstrap.min.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="chrome">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Home</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="style.css">
+  <!-- <link rel="stylesheet" href=".css/bootstrap.min.css">
     <script src="js/bootstrap.min.js"></script> -->
 </head>
+
 <body>
   <%- include('navbar', { status: status}) %>
-    <div class="container-sm-width bg-dark ">
-  <div class="container bg-primary px-4">
-    <div class="row gx-5">
-      <div class="col-3 p-4 border bg-light">
-       
-    <div class="card  text-center" style="width: 15rem;">
-      <img class="card-img-top" src="./image/AIS.png" alt="Card image cap">
-      <div class="card-body">
-        <p class="card-text">NameCompany</p>
-      </div>
-    </div>
-  
-  </div>
-  
-    <div class="col-sm-8 p-4 border bg-light">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaWith supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary ">Go somewhere</a>
+
+
+    <% if(status==="loggedIn") { %>
+      <% if(user) { %>
+
+        <div class="container-sm-width bg-dark ">
+          <div class="container bg-primary px-4">
+            <div class="row gx-5">
+              <div class="col-3 p-4 border bg-light">
+
+                <div class="card  text-center" style="width: 15rem;">
+                  <img class="card-img-top" src="./image/AIS.png" alt="Card image cap">
+                  <div class="card-body">
+                    <p class="card-text">NameUser</p>
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="col-sm-8 p-4 border bg-light">
+                <div class="card">
+                  <div class="card-body">
+                    <h5 class="card-title">Special title treatment</h5>
+                    <p class="card-text">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaWith supporting text below as a natural
+                      lead-in to additional content.</p>
+                    <a href="#" class="btn btn-primary ">Go somewhere</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <% } else if(company) { %>
+
+            <div class="container bg-light px-4">
+              <div class="row gx-5">
+                <div class="col-3 p-4 border bg-light">
+
+                  <div class="card text-center  " style="width: 15rem;">
+                    <img class="card-img-top" src="./image/AIS.png" alt="Card image cap">
+                    <div class="card-body">
+                      <p class="card-text">NameCompany</p>
+                    </div>
+                  </div>
+
+                </div>
+
+                <div class="col-sm-8 p-4 border bg-light">
+                  <div class="card">
+                    <div class="card-body">
+                      <h5 class="card-title">Special title treatment</h5>
+                      <p class="card-text">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaWith supporting text below as a natural
+                        lead-in to additional content.</p>
+                      <a href="#" class="btn btn-primary ">Go somewhere</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <% } else { %>
+
+              <div class="container bg-light px-4">
+                <div class="row gx-5">
+                  <div class="col-3 p-4 border bg-light">
+
+                    <div class="card text-center  " style="width: 15rem;">
+                      <img class="card-img-top" src="./image/AIS.png" alt="Card image cap">
+                      <div class="card-body">
+                        <p class="card-text">NameAdmin</p>
+                      </div>
+                    </div>
+
+                  </div>
+
+                  <div class="col-sm-8 p-4 border bg-light">
+                    <div class="card">
+                      <div class="card-body">
+                        <h5 class="card-title">Special title treatment</h5>
+                        <p class="card-text">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaWith supporting text below as a natural
+                          lead-in to additional content.</p>
+                        <a href="#" class="btn btn-primary ">Go somewhere</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <% } %>
+    <% } else { %>
+        <div class="container bg-light px-4">
+          <div class="row gx-5">
+            <div class="col-3 p-4 border bg-light">
+
+              <div class="card text-center  " style="width: 15rem;">
+                <img class="card-img-top" src="./image/AIS.png" alt="Card image cap">
+                <div class="card-body">
+                  <p class="card-text">NoName</p>
+                </div>
+              </div>
+
+            </div>
+            <div class="col-sm-8 p-4 border bg-light">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Special title treatment</h5>
+                  <p class="card-text">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaWith supporting text below as a
+                    natural
+                    lead-in to additional content.</p>
+                  <a href="#" class="btn btn-primary ">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
-  </div>
-  </div>
-
-
-
-
-  <div class="container bg-light px-4">
-    <div class="row gx-5">
-      <div class="col-3 p-4 border bg-light">
-       
-    <div class="card text-center  " style="width: 15rem;">
-      <img class="card-img-top" src="./image/AIS.png" alt="Card image cap">
-      <div class="card-body">
-        <p class="card-text">NameCompany</p>
-      </div>
-    </div>
-  
-  </div>
-  
-    <div class="col-sm-8 p-4 border bg-light">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaWith supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary ">Go somewhere</a>
-        </div>
-      </div>
-    </div>
-  </div>
-  </div>
-  
-
+        <% } %>
 
 
 
 </body>
+
 </html>
