--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,50 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Profile</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/style.css">
 </head>
+
 <body>
-    <section class="sectionregister">
-            <div class="form-box-regis">
-                <div class="form-value">
+  
+  <%- include('navbar') %>
+          <% if(user) { %>
+            <form action="/user/updateprofile/<%= user.id_user %>" method="post">
+
+              <div>
+                <input type="text" id="username" name="username" value="<%= user.username %>" />
+                <label for="username">username</label>
+              </div>
+              <div >
+                <ion-icon name="mail-outline"></ion-icon>
+                <input type="email" id="email" name="email" value="<%= user.email %>" />
+                <label for="email">Email</label>
+              </div>
+              
+              <button type="submit" class="btn btn-primary">save</button>
+            </form>
+            <% } else if(company) { %>
+              <form action="/company/updateprofile/<%= company.id_company %>" method="post">
+
+                <div >
+                  <input type="text" id="username" name="username" value="<%= company.username %>" />
+                  <label for="username">username</label>
+                </div>
+                <div >
+                  <ion-icon name="mail-outline"></ion-icon>
+                  <input type="email" id="email" name="email" value="<%= company.email %>" />
+                  <label for="email">Email</label>
+                </div>
+               
+                <button type="submit" class="btn btn-primary">save</button>
+              </form>
+
+              <% } else if(admin) { %>
+                <form action="/admin/updateprofile/<%= admin.id_admin %>" method="post">
+
+                  <div >
+                    <input type="text" id="username" name="username" value="<%= admin.username %>" />
+                    <label for="username">username</label>
+                  </div>
+                  <div>
+                    <ion-icon name="mail-outline"></ion-icon>
+                    <input type="email" id="email" name="email" value="<%= admin.email %>" />
+                    <label for="email">Email</label>
+                  </div>
                   
-                  <form action="/user/updateprofile/<%= user.id_member %>" method="post">
+                  <button type="submit" class="btn btn-primary">save</button>
+                </form>
 
-                      <div class="inputbox-regis">
-                        <input type="text" id="username"  name="username" value="<%= user.username %>" />
-                        <label for="username">username</label>
-                      </div>
-                      <div class="inputbox-regis">
-                       <ion-icon name="mail-outline"></ion-icon>
-                       <input type="email" id="email" name= "email"value="<%= user.email %>" />
-                       <label for="email">Email</label>
-                        </div>
-                          <!-- <div class="inputbox-regis">
-                            <ion-icon name="mail-outline"></ion-icon>
-                            <input type="password" id="password" autocomplete="off" required>
-                            <label for="password">Password</label>
-                          </div> -->
-                          <button type="submit" class="btn btn-primary">save</button>
 
-                          
+                <% } %>
+                  
+     
 
-                    </form>
-                    
-                </div>
-                </div>
-            
-            
-
-        
-    </section>
-    
 </body>
+
 </html>
