--- a/views/detailjob.ejs
+++ b/views/detailjob.ejs
@@ -11,18 +11,18 @@
     <script src="js/bootstrap.min.js"></script> -->
 </head>
 <body>
-  <%- include('navbar') %>
+  
 
-  <form action="/company/addjob_company/<%= company.id_company %>" method="post">
-    
+  <form action="/company/updatejob_company/<%= job.idjob_company %>/<%= company.id_company %>" method="post">
+    <!-- value="<%= job.name_job %>" -->
     <div class="inputbox-regis">
-      <input type="text" id="name_job"  name="name_job" />
+      <input type="text" id="name_job"  name="name_job"  value="<%= job.name_job %>"/>
       <label for="name_job">name_job</label>
     </div>
     <div class="inputbox-regis">
-     
+      <!-- value="<%= job.role %>" -->
      <ion-icon name="mail-outline"></ion-icon>
-     <input type="text" id="role" name= "role" />
+     <input type="text" id="role" name= "role" value="<%= job.role %>" />
      <label for="role">role</label>
       </div>
 
@@ -30,51 +30,51 @@
 
 
       <div class="inputbox-regis">
-        <input type="text" id="detail_work"  name="detail_work"  />
+        <input type="text" id="detail_work"  name="detail_work" value="<%= job.detail_work %>" />
         <label for="detail_work">detail_work</label>
       </div>
       <div class="inputbox-regis">
        <ion-icon name="mail-outline"></ion-icon>
-       <input type="text" id="experience" name= "experience" />
+       <input type="text" id="experience" name= "experience"value="<%= job.experience %>" />
        <label for="experience">experience</label>
         </div>
 
 
 
         <div class="inputbox-regis">
-          <input type="text" id="gender"  name="gender"  />
+          <input type="text" id="gender"  name="gender" value="<%= job.gender %>" />
           <label for="gender">gender</label>
         </div>
         <div class="inputbox-regis">
          <ion-icon name="mail-outline"></ion-icon>
-         <input type="text" id="education" name= "education" />
+         <input type="text" id="education" name= "education"value="<%= job.education %>" />
          <label for="education">education</label>
           </div>
 
           <div class="inputbox-regis">
-            <input type="text" id="welfare"  name="welfare"  />
+            <input type="text" id="welfare"  name="welfare" value="<%= job.welfare %>" />
             <label for="welfare">welfare</label>
           </div>
         
           <div class="inputbox-regis">
-            <input type="text" id="salary"  name="salary"  />
+            <input type="text" id="salary"  name="salary" value="<%= job.salary %>" />
             <label for="salary">salary</label>
           </div>
           <div class="inputbox-regis">
            <ion-icon name="mail-outline"></ion-icon>
-           <input type="text" id="workday" name= "workday" />
+           <input type="text" id="workday" name= "workday"value="<%= job.workday %>" />
            <label for="workday">workday</label>
             </div>
   
             <div class="inputbox-regis">
-              <input type="text" id="day_off"  name="day_off"  />
+              <input type="text" id="day_off"  name="day_off" value="<%= job.day_off %>" />
               <label for="day_off">day_off</label>
             </div>
 
 
             <div class="inputbox-regis">
                 <ion-icon name="mail-outline"></ion-icon>
-                <input type="date" id="deadline_offer" name= "deadline_offer"/>
+                <input type="text" id="deadline_offer" name= "deadline_offer"value="<%= job.deadline_offer %>" />
                 <label for="deadline_offer">deadline_offer</label>
                  </div>
        
