--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,23 +6,25 @@
   <meta http-equiv="X-UA-Compatible" content="chrome">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css">
-  <!-- <link rel="stylesheet" href=".css/bootstrap.min.css">
-    <script src="js/bootstrap.min.js"></script> -->
 </head>
 
 <body>
   <%- include('navbar', { status: status}) %>
-
+  <form action="/company/searchcompany" method="post">
+    <input type="text" name="searchcompany" placeholder="Enter search query" required>
+    <button type="submit">Search</button>
+</form>
 
     <% if(status==="loggedIn") { %>
+      
       <% if(user) { %>
-
+        <% if(jobindex.length > 0) { %>
+          <% jobindex.forEach((jobindex) => {%>
+            <% if( jobindex != undefined) { %>
+         
         <div class="container-sm-width bg-dark ">
           <div class="container bg-primary px-4">
             <div class="row gx-5">
@@ -31,7 +33,7 @@
                 <div class="card  text-center" style="width: 15rem;">
                   <img class="card-img-top" src="./image/AIS.png" alt="Card image cap">
                   <div class="card-body">
-                    <p class="card-text">NameUser</p>
+                    <p class="card-text"><%= jobindex.name_company %></p>   
                   </div>
                 </div>
 
@@ -40,96 +42,146 @@
               <div class="col-sm-8 p-4 border bg-light">
                 <div class="card">
                   <div class="card-body">
-                    <h5 class="card-title">Special title treatment</h5>
-                    <p class="card-text">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaWith supporting text below as a natural
-                      lead-in to additional content.</p>
-                    <a href="#" class="btn btn-primary ">Go somewhere</a>
+                    <h5 class="card-title"><%= jobindex.name_job %></h5>
+                    <p class="card-text"><%= jobindex.detail_work %></p>
+                    <a href="/company/jobbyidjob/<%= jobindex.idjob_company %>" class="btn btn-primary ">Go somewhere</a>
+                    <a class="card-title"><%= jobindex.deadline_offer %> </a>
                   </div>
                 </div>
               </div>
             </div>
           </div>
+          <% } else { %>
+            <p> something wrong </p>
+           <% } %>
+      
+        <% }) %>
+      <% } else { %> 
+          <p> no data</p>
+          <% } %>
+
           <% } else if(company) { %>
-
-            <div class="container bg-light px-4">
-              <div class="row gx-5">
-                <div class="col-3 p-4 border bg-light">
-
-                  <div class="card text-center  " style="width: 15rem;">
-                    <img class="card-img-top" src="./image/AIS.png" alt="Card image cap">
-                    <div class="card-body">
-                      <p class="card-text">NameCompany</p>
-                    </div>
-                  </div>
-
-                </div>
-
-                <div class="col-sm-8 p-4 border bg-light">
-                  <div class="card">
-                    <div class="card-body">
-                      <h5 class="card-title">Special title treatment</h5>
-                      <p class="card-text">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaWith supporting text below as a natural
-                        lead-in to additional content.</p>
-                      <a href="#" class="btn btn-primary ">Go somewhere</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <% } else { %>
-
-              <div class="container bg-light px-4">
+            <% if(jobindex.length > 0) { %>
+              <% jobindex.forEach((jobindex) => {%>
+                <% if( jobindex != undefined) { %>
+             
+            <div class="container-sm-width bg-dark ">
+              <div class="container bg-primary px-4">
                 <div class="row gx-5">
                   <div class="col-3 p-4 border bg-light">
-
-                    <div class="card text-center  " style="width: 15rem;">
+    
+                    <div class="card  text-center" style="width: 15rem;">
                       <img class="card-img-top" src="./image/AIS.png" alt="Card image cap">
                       <div class="card-body">
-                        <p class="card-text">NameAdmin</p>
+                        <p class="card-text"><%= jobindex.name_company %></p>  
                       </div>
                     </div>
-
+    
                   </div>
-
+    
                   <div class="col-sm-8 p-4 border bg-light">
                     <div class="card">
                       <div class="card-body">
-                        <h5 class="card-title">Special title treatment</h5>
-                        <p class="card-text">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaWith supporting text below as a natural
-                          lead-in to additional content.</p>
-                        <a href="#" class="btn btn-primary ">Go somewhere</a>
+                        <h5 class="card-title"><%= jobindex.name_job %></h5>
+                        <p class="card-text"><%= jobindex.detail_work %></p>
+                        <a href="/company/jobbyidjob/<%= jobindex.idjob_company %>" class="btn btn-primary ">Go somewhere</a>
+                        <a class="card-title"><%= jobindex.deadline_offer %> </a>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
+              <% } else { %>
+                <p> something wrong </p>
+               <% } %>
+          
+            <% }) %>
+          <% } else { %> 
+              <p> no data</p>
               <% } %>
+            <% } else { %>
+
+              <% if(jobindex.length > 0) { %>
+                <% jobindex.forEach((jobindex) => {%>
+                  <% if( jobindex != undefined) { %>
+               
+              <div class="container-sm-width bg-dark ">
+                <div class="container bg-primary px-4">
+                  <div class="row gx-5">
+                    <div class="col-3 p-4 border bg-light">
+      
+                      <div class="card  text-center" style="width: 15rem;">
+                        <img class="card-img-top" src="./image/AIS.png" alt="Card image cap">
+                        <div class="card-body">
+                          <p class="card-text"><%= jobindex.name_company %></p>   
+                        </div>
+                      </div>
+      
+                    </div>
+      
+                    <div class="col-sm-8 p-4 border bg-light">
+                      <div class="card">
+                        <div class="card-body">
+                          <h5 class="card-title"><%= jobindex.name_job %></h5>
+                          <p class="card-text"><%= jobindex.detail_work %></p>
+                          <a href="/company/jobbyidjob/<%= jobindex.idjob_company %>" class="btn btn-primary ">Go somewhere</a>
+                          <a class="card-title"><%= jobindex.deadline_offer %> </a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <% } else { %>
+                  <p> something wrong </p>
+                 <% } %>
+            
+              <% }) %>
+            <% } else { %> 
+                <p> no data</p>
+                <% } %>
+              <% } %>
+
     <% } else { %>
-        <div class="container bg-light px-4">
+      <% if(jobindex.length > 0) { %>
+        <% jobindex.forEach((jobindex) => {%>
+          <% if( jobindex != undefined) { %>
+       
+      <div class="container-sm-width bg-dark ">
+        <div class="container bg-primary px-4">
           <div class="row gx-5">
             <div class="col-3 p-4 border bg-light">
 
-              <div class="card text-center  " style="width: 15rem;">
+              <div class="card  text-center" style="width: 15rem;">
                 <img class="card-img-top" src="./image/AIS.png" alt="Card image cap">
                 <div class="card-body">
-                  <p class="card-text">NoName</p>
+                  <p class="card-text"><%= jobindex.name_company %></p>
+ 
                 </div>
               </div>
 
             </div>
+
             <div class="col-sm-8 p-4 border bg-light">
               <div class="card">
                 <div class="card-body">
-                  <h5 class="card-title">Special title treatment</h5>
-                  <p class="card-text">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaWith supporting text below as a
-                    natural
-                    lead-in to additional content.</p>
-                  <a href="#" class="btn btn-primary ">Go somewhere</a>
+                  <h5 class="card-title"><%= jobindex.name_job %></h5>
+                  <p class="card-text"><%= jobindex.detail_work %></p>
+                  <a href="/company/jobbyidjob/<%= jobindex.idjob_company %>" class="btn btn-primary ">Go somewhere</a>
+                  <a class="dropdown-item" href="/registerUser">RegisterUser</a>
+                  <a class="card-title"><%= jobindex.deadline_offer %> </a>
                 </div>
               </div>
             </div>
           </div>
         </div>
+        <% } else { %>
+          <p> something wrong </p>
+         <% } %>
+    
+      <% }) %>
+    <% } else { %> 
+        <p> no data</p>
+        <% } %>
         <% } %>
 
 
