--- a/views/jobgetall.ejs
+++ b/views/jobgetall.ejs
@@ -1,30 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="chrome">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>registerUser</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-   
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+
 </head>
-<table>
-<body>
+
+
+    <body>
+      <%- include('navbar', { status: status}) %>
+      <div class="container">
+        <div class="row">
+      <% if(job.length > 0) { %>
+        <% job.forEach((job) => {%>
+          <% if( job != undefined) { %>
+                <div class="col-md-3">
+                  <div class="card" style="width: 18rem; margin-top: 50px">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title"><%= job.name_job %></h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <button type="submit" class="btn btn-primary">save</button>
+                      <button type="reset" class="btn btn-danger">delete</button>
+                      <button type="edit" class="btn btn-warning">edit</button>
+                    </div>
+                  </div>
+                </div>
+          <% } else { %>
+            <p> something wrong</p>
+           <% } %>
+      
+        <% }) %>
+      <% } else { %> 
+          <p> no data</p>
+          <% } %>
+       
     
-<% job.forEach((job) => {%>
-    <tr><h2>work qqwee</h2>
-        <td><%= job.name_job%></td>
-        <td><%= job.role%></td>
-        <td><%= job.detail_work%></td>
-        <td><%= job.experience%></td>
-        <td><%= job.gender%></td>
-        <td><%= job.education%></td>
-        <td><%= job.welfare%></td>
-        <td><%= job.salary%></td>
-        </tr>
-        <%})%>
-            
-</body>
-</table>
+    
+         
+                
+                
+
+
+    </body>
+
+
 </html>
