--- a/public/css/style.css
+++ b/public/css/style.css
@@ -195,6 +195,47 @@ button{
 
 
 
+aside{
+  position:running(aside);
+  padding:1.5cm;
+  text-align:left;
+}
+
+/*
+The image of Joe McFadden is placed in a circle with an black border. 
+To do so we set a fixed size, the image as background image, position the image
+and apply the border and border radius.
+
+Additionally we want the image to be partly in the header section so we move it 
+up by half of the circle's height with the help of position absolute.
+*/
+aside span.img{
+  width:3cm;
+  height:3cm;
+  background-image:url("https://images.unsplash.com/photo-1583195764036-6dc248ac07d9?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2376&q=80");
+  background-size:cover;
+  background-repeat:no-repeat;
+  background-position:center;
+  border:1.5mm solid var(--text-color);
+  border-radius:100%;
+  display:block;
+  position:absolute;
+  top:-1.5cm;
+}
+
+/*
+The sections in the aside element are separated by hr elements. We use a margin
+of 2cm on the top, 0 left and right and half a centimeter on the bottom. 
+
+The height of the hr element gets set to 0, we use a border instead with the same
+color as the text.
+*/
+aside hr{
+  margin:2cm 0 .5cm 0;
+  border:0;
+  border-top:.5mm solid var(--text-color);
+  height:0;
+}
 
 
 
