--- a/views/detailjob.ejs
+++ b/views/detailjob.ejs
@@ -11,10 +11,19 @@
 </head>
 <body>
   <!-- คิดว่าหน้านี้จะใช้สำหรับโชว์รายละเอียดและใส่เงื่อนไขเข้าไปเพื่ออัพเดต -->
-
+  <%- include('navbar', { status: status}) %>
   <form action="/company/updatejob_company/<%= job.idjob_company %>" method="post">
-    
-    <div class="inputbox-regis">
+    ชื่องาน : <%= job.name_job %>
+    ชื่องาน : <%= job.name_job %>
+    ชื่องาน : <%= job.name_job %>
+    ชื่องาน : <%= job.name_job %>
+    ชื่องาน : <%= job.name_job %>
+    ชื่องาน : <%= job.name_job %>
+    ชื่องาน : <%= job.name_job %>
+    ชื่องาน : <%= job.name_job %>
+    ชื่องาน : <%= job.name_job %>
+
+    <!-- <div class="inputbox-regis">
       <input type="text" id="name_job"  name="name_job"  value="<%= job.name_job %>"/>
       <label for="name_job">name_job</label>
     </div>
@@ -80,7 +89,7 @@
             
         <button type="submit" class="btn btn-wanning">save</button>
     
-      </form>
+      </form> -->
 </body>
 
 </html>
