--- a/views/forgotpassword.ejs
+++ b/views/forgotpassword.ejs
@@ -1,50 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Profile</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/style.css">
 </head>
+
 <body>
-    <section class="sectionregister">
-            <div class="form-box-regis">
-                <div class="form-value">
-                  
-                  <form action="/forgetpassword/:id" method="post">
+  <section class="sectionregister">
+    <div class="form-box-regis">
+      <div class="form-value">
 
-                      <div class="inputbox-regis">
-                        <input type="email" id="email"  name="email" />
-                        <label for="email">email</label>
-                      </div>
-                      <!-- <div class="inputbox-regis">
-                       <ion-icon name="mail-outline"></ion-icon>
-                       <input type="password" id="password" name= "password"/>
-                       <label for="password">password</label>
-                        </div> -->
-                          <!-- <div class="inputbox-regis">
-                            <ion-icon name="mail-outline"></ion-icon>
-                            <input type="password" id="password" autocomplete="off" required>
-                            <label for="password">Password</label>
-                          </div> -->
-                          <button type="submit" class="btn btn-primary">save</button>
+        <form action="/resetpassword/:id" method="post">
 
-                          
+          <div class="inputbox-regis">
+            <input type="email" id="email" name="email" />
+            <label for="email">email</label>
+          </div>
+          <button type="submit" class="btn btn-primary">save</button>
 
-                    </form>
-                    
-                </div>
-                </div>
-            
-            
 
-        
-    </section>
-    
+
+        </form>
+
+      </div>
+    </div>
+
+
+
+
+  </section>
+
 </body>
+
 </html>
