--- a/views/registerCompany.ejs
+++ b/views/registerCompany.ejs
@@ -1,87 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>registerCompany</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="chrome">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>registerCompany</title>
 
+  <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <script type="text/javascript"
+    src="https://earthchie.github.io/jquery.Thailand.js/jquery.Thailand.js/dependencies/JQL.min.js"></script>
+  <script type="text/javascript"
+    src="https://earthchie.github.io/jquery.Thailand.js/jquery.Thailand.js/dependencies/typeahead.bundle.js"></script>
 
+  <link rel="stylesheet"
+    href="https://earthchie.github.io/jquery.Thailand.js/jquery.Thailand.js/dist/jquery.Thailand.min.css">
+  <script type="text/javascript"
+    src="https://earthchie.github.io/jquery.Thailand.js/jquery.Thailand.js/dist/jquery.Thailand.min.js"></script>
 
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="https://earthchie.github.io/jquery.Thailand.js/jquery.Thailand.js/dependencies/JQL.min.js"></script>
-    <script type="text/javascript" src="https://earthchie.github.io/jquery.Thailand.js/jquery.Thailand.js/dependencies/typeahead.bundle.js"></script>
-    
-    <link rel="stylesheet" href="https://earthchie.github.io/jquery.Thailand.js/jquery.Thailand.js/dist/jquery.Thailand.min.css">
-<script type="text/javascript" src="https://earthchie.github.io/jquery.Thailand.js/jquery.Thailand.js/dist/jquery.Thailand.min.js"></script>
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
 
 </head>
+
 <body>
-  
-  <form action="/company/registercompany" method="post">
-   <!-- Name input -->
-   <div  class="data">
-    <label  for="name">name</label>
-    <input type="text"  name ="username" id="name"  />
-    
-  </div>
-   <!-- Password input -->
-  <div  class="data">
-    <label for="password">Password</label>
-    <input type="password" name ="password" id="password" >
-    
-  </div>
+
+  <form action="/company/registercompany" method="post" enctype="multipart/form-data">
+    <!-- Name input -->
+    <div class="data">
+      <label class="form-label" for="username">Username</label>
+      <input type="text" name="username" id="username" class="form-control"/>
+
+    </div>
+    <!-- Password input -->
+    <div class="data">
+      <label class="form-label" for="password">Password</label>
+      <input type="password" name="password" id="password" class="form-control"/>
+
+    </div>
 
 
- <!-- Email input -->
- <div  class="data">
-    <label  for="email">Email</label>
-    <input type="email"  name ="email" id="email" />
-    
-  </div>
+    <!-- Email input -->
+    <div class="data">
+      <label class="form-label" for="email">Email</label>
+      <input type="email" name="email" id="email" class="form-control" />
 
-   <!-- tell input -->
- <!-- <div class="form-outline mb-4">
-    <label class="form-label" for="tell_company">Tell</label>
-    <input type="tell_company" name ="tell_company" id="tell_company" class="form-control" />
-    
-  </div> -->
+    </div>
 
-  
-  <!-- userCompany input -->
- <!-- <div class="form-outline mb-4">
-    <label class="form-label" for="user_company">NameCompany</label>
-    <input type="user_company" name ="user_company" id="user_company" class="form-control" />
-    
-  </div> -->
+    <div class="data">
+      <label for="image">image</label>
+      <input type="file" id="image" name="image" accept="image/*"/>
 
-  <!-- typeCompany input -->
- <!-- <div class="form-outline mb-4">
-    <label class="form-label" for="type_company">TypeCompany</label>
-    <input type="type_company" name ="type_company" id="type_company" class="form-control" />
+    </div>
+
+    <!-- tell input -->
+    <div class="form-outline mb-4">
+      <label class="form-label" for="tell_company">Tell</label>
+      <input type="tell_company" name="tell_company" id="tell_company" class="form-control" />
+
+    </div>
+
+
+    <!-- userCompany input -->
+    <div class="form-outline mb-4">
+      <label class="form-label" for="name_company">NameCompany</label>
+      <input type="name_company" name="name_company" id="name_company" class="form-control" />
+
+    </div>
+
+    <!-- typeCompany input -->
+    <div class="form-outline mb-4">
+      <label class="form-label" for="type_company">TypeCompany</label>
+      <input type="type_company" name="type_company" id="type_company" class="form-control" />
+    </div>
     
-  </div> -->
-  <!-- NameFormCompany input -->
-  <div class="alert alert-danger" role="alert" id="error" style="display:none;"></div>
-      <div class="alert alert-success" role="alert" id="success" style="display:none;"></div>
-  <button type="submit" class="btn btn-primary">RegisterCompany</button>
-  
+    <!-- typeCompany input -->
+    <div class="form-outline mb-4">
+      <label class="form-label" for="county_company">CountyCompany</label>
+      <input type="county_company" name="county_company" id="county_company" class="form-control" />
+    </div>
+
+    <!-- typeCompany input -->
+    <div class="form-outline mb-4">
+      <label class="form-label" for="province_company">ProvinceCompany</label>
+      <input type="province_company" name="province_company" id="province_company" class="form-control" />
+    </div>
+
+    <!-- typeCompany input -->
+    <div class="form-outline mb-4">
+      <label class="form-label" for="address_company">AddressCompany</label>
+      <input type="address_company" name="address_company" id="address_company" class="form-control" />
+    </div>
+
+
+    <!-- typeCompany input -->
+    <div class="form-outline mb-4">
+      <label class="form-label" for="district_company">DistrictCompany</label>
+      <input type="district_company" name="district_company" id="district_company" class="form-control" />
+    </div>
+
+    <!-- typeCompany input -->
+    <div class="form-outline mb-4">
+      <label class="form-label" for="zipcode_company">ZipCompany</label>
+      <input type="zipcode_company" name="zipcode_company" id="zipcode_company" class="form-control" />
+    </div>
+
+    <!-- typeCompany input -->
+    <div class="form-outline mb-4">
+      <label class="form-label" for="tell_company">TellCompany</label>
+      <input type="tell_company" name="tell_company" id="tell_company" class="form-control" />
+    </div>
+    <button type="submit" class="btn btn-primary">RegisterCompany</button>
+
   </form>
   <script>
-    
-$.Thailand({
-    $district: $('#district'), // input ของตำบล//ใช้idแต่ละinput
-    $amphoe: $('#amphoe'), // input ของอำเภอ
-    $province: $('#province'), // input ของจังหวัด
-    $zipcode: $('#zipcode'), // input ของรหัสไปรษณีย์
-});
+
+    $.Thailand({
+      $district: $('#district_company'), // input ของตำบล//ใช้idแต่ละinput
+      $amphoe: $('#amphoe'), // input ของอำเภอ ยังไม่มีในdb
+      $province: $('#province_company'), // input ของจังหวัด
+      $zipcode: $('#zipcode_company'), // input ของรหัสไปรษณีย์
+    });
 
   </script>
 
-  
+
 </body>
 
 </html>
