--- a/views/registerUser.ejs
+++ b/views/registerUser.ejs
@@ -16,10 +16,8 @@
 
 <body>
 
-
+  <%- include('navbar') %>
   <div class="container">
-
-
     <form action="/user/registeruser" method="post">
       <div class="data">
         <label for="username">UserName</label>
