can not use email.html in gmail

--- a/views/Footer.ejs
+++ b/views/Footer.ejs
@@ -117,6 +117,7 @@
 
 
 <!-- เอาไว้ใส่ข้อมูลหน้าweb ยังไม่ทำdatabase
+  ใช้แค่อัพเดตเอาที่เหลือใส่เป้นdefault
 <div class="inputbox-regis">
   <input type="text" id="gender"  name="gender" value="<%= job.gender %>" />
   <label for="gender">gender</label>
