--- a/views/changepassword.ejs
+++ b/views/changepassword.ejs
@@ -17,7 +17,7 @@
         <input type="email" name="email" id="email" required>
         <button type="submit">Submit</button>
         </form>
-       <% } else if { %>
+       <% } else if (company) { %>
 
         <form action="company/changepassword/" method="post">
             <label for="otp">OTP:</label>
