--- a/views/detailjob.ejs
+++ b/views/detailjob.ejs
@@ -84,12 +84,12 @@
                 <ion-icon name="mail-outline"></ion-icon>
                 <input type="text" id="deadline_offer" name= "deadline_offer"value="<%= job.deadline_offer %>" />
                 <label for="deadline_offer">deadline_offer</label>
-                 </div>
+                 </div>-->
        
             
-        <button type="submit" class="btn btn-wanning">save</button>
+        <button type="submit" class="btn btn-wanning">save</button> 
     
-      </form> -->
+      </form> 
 </body>
 
 </html>
