--- a/views/changepassword.ejs
+++ b/views/changepassword.ejs
@@ -8,11 +8,19 @@
 </head>
 
 <body>
+    <%- include('navbar') %>
     <h1>Request Password Reset</h1>
     <% if(user) { %>
         <form action="user/changepassword/" method="post">
-        <label for="otp">OTP:</label>
-        <input type="otp" name="otp" id="otp" required>
+        <!-- <label for="otp">OTP:</label>
+        <input type="otp" name="otp" id="otp" required> -->
+
+        <input type="password" name="password" id="password" value="" placeholder="New Password"/>
+        <label for="password">password:</label>
+
+        <input type="password" name="confirmpassword" id="confirmpassword" value="" placeholder="Confirm Password"/>
+        <label for="password">confirmpassword:</label>
+
         <label for="email">Email:</label>
         <input type="email" name="email" id="email" required>
         <button type="submit">Submit</button>
@@ -22,6 +30,13 @@
         <form action="company/changepassword/" method="post">
             <label for="otp">OTP:</label>
             <input type="otp" name="otp" id="otp" required>
+
+            <input type="password" name="password" id="password" value="" placeholder="New Password"/>
+        <label for="password">password:</label>
+
+        <input type="password" name="confirmpassword" id="confirmpassword" value="" placeholder="Confirm Password"/>
+        <label for="password">confirmpassword:</label>
+
             <label for="email">Email:</label>
             <input type="email" name="email" id="email" required>
             <button type="submit">Submit</button>
