--- a/views/forgotpassword.ejs
+++ b/views/forgotpassword.ejs
@@ -14,14 +14,15 @@
 </head>
 
 <body>
+  <%- include('navbar') %>
   <section class="sectionregister">
     <div class="form-box-regis">
       <div class="form-value">
 
-        <form action="/resetpassword/:id" method="post">
+        <form action="user/resetpassword" method="post">
 
           <div class="inputbox-regis">
-            <input type="email" id="email" name="email" />
+            <input type="email" id="email" name="email" placeholder="Enter Email"/>
             <label for="email">email</label>
           </div>
           <button type="submit" class="btn btn-primary">save</button>
