--- a/views/login.ejs
+++ b/views/login.ejs
@@ -25,7 +25,9 @@
               <ion-icon name="mail-outline"></ion-icon>
               <input type="email" name="email" id="email"  autocomplete="off" required/>
               <label for="email">Email</label>
-
+              <script>
+              let email = 'gygg' 
+              console.log(email)</script>
 
               
 
