--- a/views/Footer.ejs
+++ b/views/Footer.ejs
@@ -1,6 +1,8 @@
   <!-- Footer -->
   <footer class="text-center text-lg-start bg-white text-muted bg-primary">
     <!-- Section: Social media -->
+    <% if(webpage.length > 0) { %>
+    
     <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom bg-warning">
       <!-- Left -->
       <div class="me-5 d-none d-lg-block">
@@ -11,21 +13,27 @@
       <!-- Right -->
       <div >
         <a href="" class="me-4 link-secondary">
+          <%= webpage.facebook %>
           <i class="bi bi-facebook"></i>
         </a>
         <a href="" class="me-4 link-secondary">
+          <%= webpage.twitter %>
           <i class="bi bi-twitter"></i>
         </a>
         <a href="" class="me-4 link-secondary">
+          <%= webpage.google %>
           <i class="bi bi-google"></i>
         </a>
         <a href="" class="me-4 link-secondary">
+          <%= webpage.instagram %>
           <i class="bi bi-instagram"></i>
         </a>
         <a href="" class="me-4 link-secondary">
+          <%= webpage.linkedin %>
           <i class="bi bi-linkedin"></i>
         </a>
         <a href="" class="me-4 link-secondary">
+          <%= webpage.github %>
           <i class="bi bi-github"></i>
         </a>
       </div>
@@ -42,7 +50,7 @@
           <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
             <!-- Content -->
             <h6 class="text-uppercase fw-bold mb-4">
-              <i class="bi bi-gem me-3 text-secondary"></i>Company name
+              <i class="bi bi-gem me-3 text-secondary"></i><%= webpage.name %>
             </h6>
             <p>
               Here you can use rows and columns to organize your footer content. Lorem ipsum
@@ -111,7 +119,9 @@
       </div>
     </section>
     <!-- Section: Links  -->
-
+<% } else {%>
+<script> console.log("fail data webpage")</script>
+<% } %>
 
 
 
