--- a/views/jobgetall.ejs
+++ b/views/jobgetall.ejs
@@ -28,7 +28,7 @@
                     <div class="card-body">
                       <h5 class="card-title"><%= job.name_job %></h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <button type="submit" class="btn btn-primary">edit</button>
+                      <button type="submit" class="btn btn-primary"><a href="#"></a>edit</button>
                       <button type="reset" class="btn btn-danger">delete</button>
                       <!-- <a  href="company/updatejob_company/:id">edit</a>   เรียกใช้update -->
                     </div>
