--- a/views/registerCompany.ejs
+++ b/views/registerCompany.ejs
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-
+  <%- include('navbar') %>
   <form action="/company/registercompany" method="post" enctype="multipart/form-data">
     <!-- Name input -->
     <div class="data">
