--- a/views/resume.ejs
+++ b/views/resume.ejs
@@ -5,6 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="chrome">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>registerUser</title>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript"
+      src="https://earthchie.github.io/jquery.Thailand.js/jquery.Thailand.js/dependencies/JQL.min.js"></script>
+    <script type="text/javascript"
+      src="https://earthchie.github.io/jquery.Thailand.js/jquery.Thailand.js/dependencies/typeahead.bundle.js"></script>
+  
+    <link rel="stylesheet"
+      href="https://earthchie.github.io/jquery.Thailand.js/jquery.Thailand.js/dist/jquery.Thailand.min.css">
+    <script type="text/javascript"
+      src="https://earthchie.github.io/jquery.Thailand.js/jquery.Thailand.js/dist/jquery.Thailand.min.js"></script>
+  
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <!-- <link rel="stylesheet" href=".css/bootstrap.min.css">
@@ -12,9 +24,9 @@
 </head>
 <body>
 <!--if resume.id_user ==undefined ให้แสดงหน้าaddแต่ถ้าไม่ให้แสดงhistory -->
-<%- include('navbar', { status: status}) %>
-<% if(resume == undefined) { %>
-  <form action="/user/addresume/<%= user.id_user %>" method="post">
+<%- include('navbar') %>
+<% if(resume) { %>
+  <form action="/user/addresume/<%= user.id_user %>" method="post" enctype="multipart/form-data">
 
     <div class="inputbox-regis">
       <input type="text" id="professional_summary"  name="professional_summary" />
@@ -117,7 +129,16 @@
 
       </form>
 <% } %>
- 
+<script>
+
+  $.Thailand({
+    $district: $('#district_company'), // input ของตำบล//ใช้idแต่ละinput
+    $amphoe: $('#amphoe'), // input ของอำเภอ ยังไม่มีในdb
+    $province: $('#province_company'), // input ของจังหวัด
+    $zipcode: $('#zipcode_company'), // input ของรหัสไปรษณีย์
+  });
+
+</script>
 </body>
 
 </html>
